# lifegit

./: .gitignore  CLAUDE.md  README.md  lifegit.py  pyproject.toml
lifegit/: __init__.py  cli.py  content.py  content.toml  git_wrapper.py  validator.py
lifegit/content/: __init__.py  narratives.py  prompts.py
lifegit/stages/: __init__.py  act1.py  act2.py  base.py
